src/objects/TR1__Search_Match_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>TR1__Monitored_Contact_Fields__c</fullName>
        <label>Monitored Contact Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Monitored_Job_Fields__c</fullName>
        <label>Monitored Job Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daxtra</fullName>
                    <default>true</default>
                    <label>Daxtra</label>
                </value>
                <value>
                    <fullName>TextKernel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Sync_Jobs_To_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This can only be used to sync jobs to any provider except Daxtra</inlineHelpText>
        <label>Sync Jobs To Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Threshold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Search &amp; Match Configuration</label>
    <pluralLabel>Search &amp; Match Configurations</pluralLabel>
</CustomObject>